# starman-cli

./: .gitignore  LICENSE  README.md  charts.md  charts.py  config.py  get.yaml  post.yaml  pyproject.toml  render.py  requester.py  requirements.txt  spaceman.py  state.yaml
.github/workflows/: release.yml
charts/sample/: delete.yaml  get.yaml  manifest.yaml  post.yaml
charts/sample/get/: other.yaml
charts/sample/other/: get.yaml
spaceman/: charts.py  cli.py  config.py  loader.py  paths.py  render.py  requester.py  response.py
spaceman/charts/sample/: post.yaml
spaceman/charts/sample/get/: users.yaml
starman/: charts.py  cli.py  config.py  loader.py  paths.py  render.py  requester.py
starman/charts/sample/: delete.yaml  post.yaml
