[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spaceman"]

[project]
name = "spaceman-cli"
version = "1.0.0"
authors = [{ name="Charles Gala", email="cjgala@gmail.com" }]
description = "A tool for submitting premade API requests from the command-line"
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
spaceman = "spaceman.cli:main"

[project.urls]
Homepage = "https://github.com/cjgala/spaceman-cli"
Issues = "https://github.com/cjgala/spaceman-cli/issues"
